12/5/11 #3170, added sim-sharing for sliders related to custom solution
12/5/11 #3170, added sim-sharing for pH Meter and pH Paper
12/5/11 #3170, added sim-sharing to all radio buttons, check boxes, and icons
5/9/11 Moved ConductivityTester and related strings and images from acid-base-solutions to piccolo-phet, see #2864
# 1.02.00 (51717) May 9, 2011
5/9/11 > added new translation credits features
# 1.01.01 (51561) May 5, 2011
3/29/11 #2375, use Piccolo's SwingLayoutNode in MagnifyingGlassPrototypeApplication
3/29/11 #2615, use Piccolo molecule rendering in MagnifyingGlassPrototypeApplication
1/24/11 #2615, delete molecule images files (accidentally deleted from advanced-acid-base-solutions last time)
# 1.01.00 (47707) Jan 5, 2011
1/4/11 #2615 update screenshot to reflect new colors
# 1.00.05 (47683) Jan 5, 2011
1/4/11 #2615, icon image file for concentration graph was out of sync with color changes, use programmatic icon generation so this doesn't happen again
1/4/11 #2615, delete molecule image files and assets (molecules.svg), no longer needed
# 1.00.04 (47514) Dec 29, 2010
12/29/10 use a darker gray for neutral molecules, so that they are easier to see when solvent molecules are visible
# 1.00.03 (47510) Dec 29, 2010
12/29/10 #2615, #2577 use AtomNode with 3-color round gradient for molecule nodes
# 1.00.02 (47165) Dec 14, 2010
12/14/10 #2577, replace molecules images with Piccolo code to generate images, so that colors are easier to change
12/13/10 #2611, change pH papar color to cream, add a faint gray border
12/13/10 #2611, move color of pH paper to ABSColors
12/13/10 #2610, increase font size of y-axis on graph (from 16 to 20 point)
12/13/10 #2610, use black for "negligible" text in graph
12/10/10 restore molecule images
# 1.00.01 (47056) Dec 10, 2010
> improve colorblind support by using new colors
12/10/10 demonstrate proposed color changes to address colorblind issues