@@ -3,3 +3,6 @@ project.depends.data=data
 project.depends.source=src
 project.depends.lib=phetcommon piccolo-phet
 project.flavor.acid-base-solutions.mainclass=edu.colorado.phet.acidbasesolutions.AcidBaseSolutionsApplication
+
+project.flavor.acid-base-solutions-study.mainclass=edu.colorado.phet.acidbasesolutions.AcidBaseSolutionsApplication
+project.flavor.acid-base-solutions-study.args=-study
