@@ -1,3 +1,5 @@
+12/5/11 #3170, added sim-sharing "study" flavor to build.properties file
+12/5/11 #3170, added sim-sharing parameter indicating whether pH meter is in solution
 12/5/11 #3170, added sim-sharing for sliders related to custom solution
 12/5/11 #3170, added sim-sharing for pH Meter and pH Paper
 12/5/11 #3170, added sim-sharing to all radio buttons, check boxes, and icons
